# mold

./: LICENSE  README.md  pyproject.toml
mol/: earlystop.py
mold/: detector.py  utils.py  validation.py
mold/data/: __init__.py  dataset_paths.py  datasets.py
mold/models/: __init__.py  dino_models.py  imagenet_models.py  legacy_clip_models.py  vgg.py  vision_transformer.py  vision_transformer_misc.py
mold/models/clip/: model.py
mold/networks/: base_model.py  lpf.py  resnet_lpf.py  trainer.py
mold/options/: base_options.py  test_options.py  train_options.py
scripts/: test_adm.sh  test_progan.sh  train.py  train.sh  train_adm.sh  train_dinov2.sh  train_progan.sh  validate.py
